fix: arrow showing on mobile and tablet version (Sunday, March 12, 19:59)

--- a/cssBayan/css/style.css
+++ b/cssBayan/css/style.css
@@ -74,7 +74,7 @@ p {
   display: block;
 }
 
-@media (max-width: 1920px) {
+@media (min-width: 1920px) {
   .accordion > .accordion__item > a {
     color: blue;
   }
